2005-12-07  Bruno Haible  <bruno@clisp.org>

	* msgl-iconv.c (iconv_message_list): Fix syntax error.
	Reported by Dave Patton <dpatton@confluence.org>.

2005-12-04  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (CSHARPCOMPFLAGS): Use value set by csharpcomp.m4.

2005-11-29  Colin Watson  <cjwatson@ubuntu.com>

	* msggrep.c (invert_match): New variable.
	(long_options): Add --invert-match option.
	(main): Handle --invert-match option.
	(usage): Document --invert-match option.
	(is_message_selected_no_invert): New function, extracted from
	is_message_selected.
	(is_message_selected): Call it. Handle match inversion.

2005-11-01  Bruno Haible  <bruno@clisp.org>

	* write-csharp.c (write_csharp_code): Add culture_name argument.
	Emit an AssemblyCulture note for it.
	(msgdomain_write_csharp): Update.
	Suggested by Pepa <cerna.zelva@seznam.cz>.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* plural-eval.h: New file.
	* plural-eval.c: Include plural-eval.h.
	(sigfpe_exit, sigfpe_code, sigfpe_handler, install_sigfpe_handler,
	uninstall_sigfpe_handler): New definitions, moved here from
	msgl-check.c.
	* msgl-check.c: Include plural.eval.h.
	(sigjmp_buf, sigsetjmp, siglongjmp, USE_SIGINFO): Move to plural-eval.h.
	(sigfpe_exit, sigfpe_code, sigfpe_handler, install_sigfpe_handler,
	uninstall_sigfpe_handler): Move to plural-eval.c.
	* Makefile.am (noinst_HEADERS): Add plural-eval.h.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* msgl-check.c: Include c-ctype.h instead of ctype.h.
	(check_plural): Use c_isspace instead of isspace.
	* x-librep.c: Include c-ctype.h instead of ctype.h.
	(read_token): Use c_isxdigit instead of isxdigit.
	* x-rst.c: Include c-ctype.h instead of ctype.h.
	(extract_rst): Use c_isdigit instead of isdigit.
	* x-ycp.c: Don't include ctype.h.

2005-10-09  Bruno Haible  <bruno@clisp.org>

	* plural-exp.c: Renamed from plural.c.
	* Makefile.am (libgettextsrc_la_SOURCES): Update.

2005-10-18  Bruno Haible  <bruno@clisp.org>
