@@ -1842,6 +1842,33 @@ set_format_flags_from_context (enum is_format is_format[NFORMATS],
 }
 
 
+static void
+warn_format_string (enum is_format is_format[NFORMATS], const char *string,
+		    lex_pos_ty *pos, const char *pretty_msgstr)
+{
+  if (possible_format_p (is_format[format_python])
+      && get_python_format_unnamed_arg_count (string) > 1)
+    {
+      char buffer[21];
+
+      error_with_progname = false;
+      if (pos->line_number == (size_t)(-1))
+        buffer[0] = '\0';
+      else
+        sprintf (buffer, ":%ld", (long) pos->line_number);
+      multiline_warning (xasprintf (_("%s%s: warning: "),
+				    pos->file_name, buffer),
+		         xasprintf (_("\
+'%s' format string with unnamed arguments cannot be properly localized:\n\
+The translator cannot reorder the arguments.\n\
+Please consider using a format string with named arguments,\n\
+and a mapping instead of a tuple for the arguments.\n"),
+                                    pretty_msgstr));
+      error_with_progname = true;
+    }
+}
+
+
 message_ty *
 remember_a_message (message_list_ty *mlp, char *msgctxt, char *msgid,
 		    flag_context_ty context, lex_pos_ty *pos,
@@ -2069,6 +2096,10 @@ meta information, not the empty string.\n")));
 
   mp->do_wrap = do_wrap == no ? no : yes;	/* By default we wrap.  */
 
+  /* Warn about the use of non-reorderable format strings when the programming
+     language also provides reorderable format strings.  */
+  warn_format_string (is_format, mp->msgid, pos, "msgid");
+
   /* Remember where we saw this msgid.  */
   if (line_comment)
     message_comment_filepos (mp, pos->file_name, pos->line_number);
@@ -2162,6 +2193,10 @@ remember_a_message_plural (message_ty *mp, char *string,
 		free (invalid_reason);
 	      }
 	  }
+
+      /* Warn about the use of non-reorderable format strings when the programming
+         language also provides reorderable format strings.  */
+      warn_format_string (mp->is_format, mp->msgid_plural, pos, "msgid_plural");
     }
   else
     free (msgid_plural);
